2009-01-21  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' local->remote to the new
	  scheme with fetch_{local,remote}_list().
	  Enabled --dry-run for 'sync'.

2009-01-20  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Migrated 'sync' remote->local to the new
	  scheme with fetch_{local,remote}_list().
	  Changed fetch_remote_list() to return dict() compatible
	  with fetch_local_list().
	  Re-implemented --exclude / --include processing.
	* S3/Utils.py: functions for parsing RFC822 dates (for HTTP
	  header responses).
	* S3/Config.py: placeholders for --include.

2009-01-15  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3Uri.py, NEWS: Support for recursive 'put'.

2009-01-13  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated.
	* s3cmd: renamed (fetch_)remote_keys to remote_list and
	  a few other renames for consistency.

2009-01-08  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Some errors during file upload were incorrectly 
	  interpreted as MD5 mismatch. (bug #2384990)
	* S3/ACL.py: Move attributes from class to instance.
	* run-tests.py: Tests for ACL.
	* s3cmd: Minor messages changes.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: New command 'setacl'.
	* S3/S3.py: Implemented set_acl().
	* S3/ACL.py: Fill in <Owner/> tag in ACL XML.
	* NEWS: Info about 'setacl'.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Factored remote_keys generation from cmd_object_get()
	  to fetch_remote_keys().
	* s3cmd: Display Public URL in 'info' for AnonRead objects.
	* S3/ACL.py: Generate XML from a current list of Grantees

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: Keep ACL internally as a list of of 'Grantee' objects.
	* S3/Utils.py: Fix crash in stripNameSpace() when the XML has no NS.

2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: New object for handling ACL issues.
	* S3/S3.py: Moved most of S3.get_acl() to ACL class.
	* S3/Utils.py: Reworked XML helpers - remove XMLNS before 