@@ -1,3 +1,9 @@
+2009-01-22  Michal Ludvig  <michal@logix.cz>
+
+	* run-tests.py: Updated paths for the new sync
+	  semantics.
+	* s3cmd, S3/S3.py: Small fixes to make testsuite happy.
+
 2009-01-21  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd: Migrated 'sync' local->remote to the new
